# python-svc-provider

./: Makefile
datatwins-azure/: Makefile  pyproject.toml
datatwins-azure/mck/datatwins/email/: spi.py
datatwins-azure/mck/datatwins/logging/: spi.py
datatwins-azure/mck/datatwins/storage/azure/: spi.py
datatwins-azure/tests/mck/datatwins/storage/azure/: azure_storage_service_test.py  conftest.py
datatwins-core/: Makefile  pyproject.toml
datatwins-core/mck/datatwins/email/: __init__.py  spi.py
datatwins-core/mck/datatwins/logging/: __init__.py  spi.py
datatwins-core/mck/datatwins/secrets/: __init__.py
datatwins-core/mck/datatwins/storage/: __init__.py  spi.py
datatwins-core/tests/mck/datatwins/email/: conftest.py  email_service_test.py
datatwins-core/tests/mck/datatwins/logging/: conftest.py  decorator_test.py  logging_service_test.py
datatwins-core/tests/mck/datatwins/storage/: conftest.py  storage_service_test.py
